public class AnimationStrings
{
    public static string isRunning = "isRunning";
    public static string isMoving = "isMoving";
    public static string isGrouned = "isGrounded";
    public static string isOnCelling = "isOnCelling";
    public static string isOnWall = "isOnWall";
    public static string yVelocity = "yVelocity";
    public static string Jumping = "jumping";
    public static string isAttacking = "isAttacking";
    public static string isDying = "isDying";
}